# nimbus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig.defaults
components/app/: CMakeLists.txt
components/backlight/: CMakeLists.txt
components/bme680_sensor/: CMakeLists.txt
components/bme680_sensor/include/: bme680_sensor.h
components/bme680_sensor/src/: bme680_sensor.c
components/buttons/: CMakeLists.txt
components/display/: CMakeLists.txt
components/power_manager/: CMakeLists.txt
components/ui/: CMakeLists.txt
components/ui/include/: fonts.h  images.h  screens.h  ui.h
components/ui/src/: images.c  screens.c  ui.c  ui_font_sf_b_10_digits.c  ui_font_sf_sb_10_digits.c  ui_font_sf_sb_30_digits.c  ui_font_sf_sb_50_digits.c  ui_font_sf_sb_60_digits.c  ui_image_bad.c  ui_image_base.c  ui_image_battery_1_charging.c  ui_image_battery_1_not_charging.c  ui_image_battery_2_charging.c  ui_image_battery_2_not_charging.c  ui_image_battery_3_charging.c  ui_image_battery_3_not_charging.c  ui_image_battery_full_charging.c  ui_image_cat_huh.c  ui_image_choice_no.c  ui_image_choice_yes.c  ui_image_crit.c  ui_image_damp.c  ui_image_dead.c  ui_image_diver.c  ui_image_dizzy.c  ui_image_dry.c  ui_image_full_not_charging.c  ui_image_good.c  ui_image_happy.c  ui_image_indicator_good.c  ui_image_lightning_charge.c  ui_image_mid.c  ui_image_minus.c  ui_image_nothing.c  ui_image_ordinary.c  ui_image_ordinary_nimbus.c  ui_image_plus.c  ui_image_sad.c  ui_image_temp_minus.c  ui_image_temp_normal.c  (+7 more)
main/: CMakeLists.txt  idf_component.yml  main.c
(+14 files in other folders)
